Bug 142631 - Poor contrast on spellcheck in Linux dark mode
Summary: Poor contrast on spellcheck in Linux dark mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.6.2 release
Hardware: All Linux (All)
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
: 131978 133306 143060 150415 (view as bug list)
Depends on:
Blocks: Spell-Checking-Dialog Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2021-06-03 07:05 UTC by Tim Chambers
Modified: 2023-01-02 14:57 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshot (49.61 KB, image/png)
2021-06-03 07:05 UTC, Tim Chambers
Details
Screenshot - of the problem persisting (76.21 KB, image/png)
2023-01-01 05:00 UTC, nicholasjoll
Details
screenshot from Version: 7.4.3.2 (35.38 KB, image/png)
2023-01-01 10:03 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Chambers 2021-06-03 07:05:06 UTC
Description:
Low contrast between text being spellchecked and the background of the text in the spell checker when using dark mode in pop!_OS

Steps to Reproduce:
0. System theme on Pop!_OS set to the default Settings->Apeparance->Appearance->Dark
1.Tools->Options->Personalization: Default view, do not use themes, then OK
2.Open a document with spelling that is not recognised in the spell checker
3.Run a spell check (F7)

Actual Results:
The text displayed in the spell check window is black on a dark grey background and is hard to read due to the lack of contrast. Text for buttons and other info in the window is light grey and easy to read

Expected Results:
The text displayed against the dark background should be light, or the background should be light with the text dark.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.3.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 12; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 1:7.1.3~rc2-0ubuntu0.20.10.1~lo1
Calc: threaded
Comment 1 Tim Chambers 2021-06-03 07:05:55 UTC
Created attachment 172588 [details]
Screenshot

Illustration of the issue
Comment 2 Tim Chambers 2021-06-03 07:14:13 UTC
Suggested fix - the text colour and background for sample text and suggestions in the spellcheck window should match the document settings.
Comment 3 Dieter 2021-07-14 06:26:41 UTC
*** Bug 143060 has been marked as a duplicate of this bug. ***
Comment 4 Timur 2021-07-14 08:15:04 UTC
*** Bug 143330 has been marked as a duplicate of this bug. ***
Comment 5 Clarc 2021-07-21 14:49:31 UTC
Can confirm, this is an issue.
Comment 6 Timur 2022-09-12 11:17:38 UTC
*** Bug 150415 has been marked as a duplicate of this bug. ***
Comment 7 Timur 2022-09-12 11:39:09 UTC
Bibisected with 6.3 repo:
author	Caolán McNamara <caolanm@redhat.com>	2019-06-14
commit 243b5b392906042ab03800e0b5765e6f3513372c
weld SpellDialog

and now magical CC
Comment 8 Caolán McNamara 2022-09-12 14:28:03 UTC
well, I can make the background the "document background" color which is what the dialog seems to assume is the case
Comment 9 Commit Notification 2022-09-13 22:11:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2ea790200f5d915f88c6f78014d978ce8d91e33f

tdf#142631 use document background color in the spelling widget

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2022-09-13 22:15:44 UTC
backport to 7-4 in gerrit
Comment 11 Commit Notification 2022-09-13 22:18:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/61dae407d98d07a67e4eda63415cc8588e13c91d

tdf#142631 use document background color in the spelling widget

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 BogdanB 2022-09-17 18:24:07 UTC
It's ok now in
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: e46f9cc4b506c325cbe1060777bbc81fd1630f49
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was not ok in
Version: 7.4.0.2 / LibreOffice Community
Build ID: 1512ce97d7ed39dce3121f7e15651fd8895f950e
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 13 Timur 2022-09-28 14:52:29 UTC
*** Bug 133306 has been marked as a duplicate of this bug. ***
Comment 14 Timur 2022-09-28 14:52:50 UTC
*** Bug 131978 has been marked as a duplicate of this bug. ***
Comment 15 nicholasjoll 2023-01-01 05:00:37 UTC
Created attachment 184414 [details]
Screenshot - of the problem persisting
Comment 16 nicholasjoll 2023-01-01 05:00:53 UTC
Is this really fixed? Just now I downloaded and ran LO, on Linux Mint 21.1 Cinnamon, and I saw the attached.

Note the colour of the words 'hello there'. Those words are not very readable, are they?
Comment 17 BogdanB 2023-01-01 06:01:04 UTC
(In reply to nicholasjoll from comment #16)
> Is this really fixed? Just now I downloaded and ran LO, on Linux Mint 21.1
> Cinnamon, and I saw the attached.
> 
> Note the colour of the words 'hello there'. Those words are not very
> readable, are they?

7.5 will be released in February 2023. It's tested now in order to be released on time.
Comment 18 BogdanB 2023-01-01 06:06:56 UTC
7.4.2 was released on 13 October 2022. Go to Help - About. If you have 7.4.2 version but you don't see the changes go to Help - Restart in Safe Mode - Factory settings and check that two options and restart. Everything should be fine. If not please  come back with feedback.
Comment 19 BogdanB 2023-01-01 10:01:54 UTC
It is not fixed in
Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

But it is fixed in
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Caolan, in both cases I restart to Help - Restart in Safe mode - Factory settings - and I changed in Tools - Options - LibreOffice - Application Color - LibreOffice Dark.

Something have to be changed in code OR we should remove 7.4.2 target.
Comment 20 BogdanB 2023-01-01 10:03:30 UTC
Created attachment 184416 [details]
screenshot from Version: 7.4.3.2
Comment 21 Caolán McNamara 2023-01-02 14:57:36 UTC
A missing part in 7.4 which is present in 7.5 is likely that of https://bugs.documentfoundation.org/show_bug.cgi?id=116566 which I've not cherry-picked for consideration for inclusion into 7-4 as https://gerrit.libreoffice.org/c/core/+/144910