tdf#142631 use document background color in the spelling widget

Change-Id: Ie33a0e305192697c18e20c3b6c1a554ccddf4284
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139804
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>